<resources>
    <string name="app_name">同致相伴</string>
    <string name="version">v1.0.2</string>
    <string name="login_phone"><font size="12">请输入手机号</font></string>
    <string name="login_phone2"><font size="12">手机号/健行快养服务商账号</font></string>
    <string name="login_pass"><font size="12">请输入密码</font></string>
    <string name="yzm_pass"><font size="12">请输入短信验证码</font></string>
    <string name="new_paww"><font size="12">请输入新密码</font></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_shop1"><font size="12">请与门店招牌上的一样</font></string>
    <string name="open_shop2"><font size="12">请填写联系人姓名</font></string>
    <string name="open_shop3"><font size="12">请输入手机号</font></string>
    <string name="open_shop4"><font size="12">填写详细地址\n(详细至门牌号,请与营业执照一致)</font></string>

    <string name="input_pass"><font size="12">请输入密码</font></string>

    <string name="agin_input_pass"><font size="12">请再次输入密码</font></string>

    <string name="classify"><font size="12">搜索商品 店铺</font></string>

    <string name="mesg"><font size="12">选填:给商家留言(50字以内)</font></string>
    <string name="feedback"><font size="12"> 请告诉我们您的意见和建议,我们将不断改进</font></string>
    <string name="order_mesg"><font color='#FA3314'>可留言"</font>"</string>
    <!--  tv_seales.setText(Html.fromHtml("销量:  "+"<font color='#ff0000'><big>" + dataChildBean.getSales_count()+ "</big>"));-->

</resources>
