<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="car.tzxb.b2b.Uis.LoginActivity">

    <include
        android:id="@+id/login_actionbar"
        layout="@layout/base_actionbar" />
 <TextView
     android:background="@color/colorLightGray1"
     android:layout_width="match_parent"
     android:layout_height="0.5dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp">


        <EditText
            android:id="@+id/et_find_phone"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:background="@null"
            android:drawableLeft="@mipmap/login_icon_phone"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:hint="@string/login_phone"
            android:inputType="number"
            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_color" />

        <car.tzxb.b2b.Views.CountDown.CountDownTextView
            android:id="@+id/tv_find_yzm"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/count_time_bg"
            android:gravity="center"
            android:text="获取验证码"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray1" />


    <EditText
        android:id="@+id/et_find_pass"
        android:inputType="number"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:drawableLeft="@mipmap/login_icon_yanzhengma2"
        android:drawablePadding="10dp"
        android:ellipsize="end"
        android:hint="@string/yzm_pass"
        android:lines="1"
        android:textCursorDrawable="@drawable/cursor_color" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray1" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_new_pass"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:hint="@string/new_paww"
            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_color" />

        <ImageView
            android:id="@+id/iv_pass_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/login_icon_cansee"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray1" />

    <Button
        android:background="@drawable/bg1"
        android:id="@+id/btn_submit_new_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="完成"
        android:textColor="@color/colorWhite" />

</LinearLayout>
