<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:padding="15dp"
        android:text="基本信息"
        android:textColor="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="店铺名称"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/red" />
        <EditText
            android:id="@+id/et_shop_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/open_shop1"
            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="主营类型"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/red" />
        <TextView
            android:id="@+id/tv_open_shop_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:drawableRight="@mipmap/store_icon_right"
            android:hint="请选择" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="联系人姓名"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/red" />
        <EditText
            android:id="@+id/et_shop_lxr_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/open_shop2"
            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="联系人电话"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/red" />
        <TextView
            android:id="@+id/tv_lxr_phone"
            tools:text="13333333333333333"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="座机电话"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_shop_lxr_tell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/open_shop2"
            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="推荐人"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/red" />
        <TextView
            android:id="@+id/tv_tjr_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:drawableRight="@mipmap/store_icon_right"
            android:ellipsize="end"
            android:hint="推荐人信息"
            android:lines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:text="门店位置"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@color/red" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_province"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:drawableRight="@mipmap/store_icon_right"
                android:ellipsize="end"
                android:hint="省-市-区"
                android:lines="1" />
             <TextView
                 android:background="#F5F5F5"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp" />
            <EditText
                android:id="@+id/et_open_shop_address"
                android:textSize="12sp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_width="match_parent"
                android:padding="3dp"
                android:layout_height="65dp"
                android:background="@null"
                android:gravity="start"
                android:ellipsize="end"
                android:hint="@string/open_shop4" />
            <TextView
                android:background="#F5F5F5"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />
            <TextView
                android:id="@+id/tv_open_shop_marker"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableRight="@mipmap/store_icon_right"
                android:ellipsize="end"
                android:hint="标记地图位置"
                android:lines="1" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:padding="15dp"
        android:text="门店照片"
        android:textColor="@color/colorBlack" />
</LinearLayout>